p2/confs/app3/app3-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 1
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: danipe1970/app3:latest
          ports:
            - containerPort: 80
