p2/confs/app3/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  ports:
    - name: http
      port: 80
      #protocol: TCP
      #targetport: 80
  selector:
    app: app3
